return button added

--- a/views/revision.ejs
+++ b/views/revision.ejs
@@ -20,5 +20,8 @@
         <textarea name="comment"><%= shift.comment %></textarea><br>
         <input type="submit" value="シフトを更新">
     </form>
+    <form action="/" method="get">
+        <input type="submit" value="登録画面に戻る">
+    </form>
 </body>
 </html>
